[package]
name = "axum-full-course"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe-code = "forbid"
unused = "allow"       # for exploratory dev.

[dependencies]
axum = "0.7.5"
axum-server = "0.6.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["fs"] }

[dev-dependencies]
anyhow = "1.0.86"
httpc-test = "0.1.9"
