[package]
name = "axum-full-course"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe-code = "forbid"
unused = "allow"       # for exploratory dev.

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
# Serde / json
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
# Axum
axum = { version = "0.7.5", features = ["macros"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["fs"] }
# Others
lazy-regex = "3.1.0"
async-trait = "0.1.80" # makes async fn in traits work

[dev-dependencies]
anyhow = "1.0.86"
httpc-test = "0.1.9"
